--- a/PiGu_ME.Rmd
+++ b/PiGu_ME.Rmd
@@ -7,9 +7,15 @@ library(rjags)
 #library(R2jags) #seems to fight with jagsUI
 library(jagsUI)
 library(R2OpenBUGS)
+library(dplyr)
+library(tidyr)
+library(reshape2)
 
-data_ME <- read.csv("burrow_full_week_CH.csv", stringsAsFactors = F, header = T) %>%
-  select(year, site, week, study_day, burrow_name, capt_hist)
+# data_ME <- read.csv("burrow_week_CH.csv", stringsAsFactors = F, header = T) %>%
+#   select(year, site, week, study_day, burrow_name, capt_hist)
+
+data_ME_day <- read.csv("burrow_day_CH.csv", stringsAsFactors = F, header = T) %>%
+  select(year, site, study_day, burrow_name, capt_hist)
 
 # unique <- data_ME %>% distinct(year, site, burrow_name)
 # unique$id <- 1:nrow(unique)
@@ -25,21 +31,36 @@ data_ME <- read.csv("burrow_full_week_CH.csv", stringsAsFactors = F, header = T)
 
 ```{r}
 
-data_ME_wide <- data_ME %>% 
-  distinct(year, site, burrow_name, week, capt_hist) %>% #yikes CHECK why there are duplicate year, site, burrow, week???
-  dcast(year + site + burrow_name ~ week, value.var = 'capt_hist', fill = 0, fun.aggregate = mean)
+#daily level
+data_ME_day_wide <- data_ME_day %>% 
+  distinct(year, site, burrow_name, study_day, capt_hist) %>% 
+  dcast(year + site + burrow_name ~ study_day, value.var = 'capt_hist', fill = 0, fun.aggregate = mean)
+data_ME_day_wide[is.na(data_ME_day_wide)] <- 0
 
-data_ME_wide_small <- data_ME_wide[1:1000,] 
+CH_PG_day <- as.matrix(data_ME_day_wide %>% select(-c(year, site, burrow_name)), rownames.force = F)
+colnames(CH_PG_day) <- NULL
 
-CH_PG <- as.matrix(data_ME_wide %>% select(-c(year, site, burrow_name)), rownames.force = F)
-colnames(CH_PG) <- NULL
+data_ME_day_small <- data_ME_day_wide[sample(nrow(data_ME_day_wide), 50), ]
+
+CH_PG_day_small <- as.matrix(data_ME_day_small %>% select(-c(year, site, burrow_name)), rownames.force = F)
+colnames(CH_PG_day_small) <- NULL
+
+CH_PG_day_small[CH_PG_day_small==0] <- 3
+
+#weekly level 
+# data_ME_wide <- data_ME %>% 
+#   distinct(year, site, burrow_name, week, capt_hist) %>% #yikes CHECK why there are duplicate year, site, burrow, week???
+#   dcast(year + site + burrow_name ~ week, value.var = 'capt_hist', fill = 0, fun.aggregate = mean)
+# data_ME_wide[is.na(data_ME_wide)] <- 0
+
+# CH_PG <- as.matrix(data_ME_wide %>% select(-c(year, site, burrow_name)), rownames.force = F)
+# colnames(CH_PG) <- NULL
+# is.na(CH_PG) <- 0
 
 
 ```
 
 ```{r}
-
-
 
 # Specify model in jags
 
@@ -47,26 +68,24 @@ model <- function () {
 
 # -------------------------------------------------
 # Parameters:
-# three states - state A: egg; state B: nestling; terminated
-# phiA: survival probability from egg to fledge (Q: or to nestling?) 
+# phiA: survival probability from egg to fledge (or to nestling?) 
 # phiB: survival probability from nestling to fledge
 # psiAB: probability of transitioning from egg to nestling
 # psiBA: probability of transitioning from nestling to egg
 # pA: recapture probability of eggs
 # pB: recapture probability of nestling
-# dA: probability of correctly assigning egg state to an observed individual that is an egg
-# dB: probability of correctly assigning nestling state to an observed individual that is a nestling
+# b: probability that a PV is not detected 
 # pi: probability that an individual is an egg when marked 
+  
 # -------------------------------------------------
 # States (S):
 # 1 alive as an egg
 # 2 alive as a nestling
 # 3 dead or fledged
 # Observations (O):  
-# 1 observed as an egg (BV if PV == NA/0 and study_day < prey_start)
+# 1 observed as an egg 
 # 2 observed as a nestling (PV)
-# 3 observed, but state unknown (BV when PV > 0 and study_day > prey_start or BV when no observed PV)
-# 4 not observed
+# 3 not observed
 # -------------------------------------------------
 
 # Priors and constraints
@@ -75,11 +94,10 @@ for (i in 1:nind){
       phiA[i,t] <- mean.phi[1]
       phiB[i,t] <- mean.phi[2]
       psiAB[i,t] <- mean.psi[1]
-      psiBA[i,t] <- 0 #adapted, because I think this should be zero?
+      psiBA[i,t] <- mean.psi[1] #zero? removed?
       pA[i,t] <- mean.p[1]
       pB[i,t] <- mean.p[2]
-      dA[i,t] <- mean.d[1]
-      dB[i,t] <- mean.d[2]
+      b[i,t] <- mean.b
       pi[i,t] <- mean.pi
       } # t
    } # i
@@ -88,84 +106,75 @@ for (u in 1:2){
    mean.phi[u] ~ dunif(0, 1)    # Priors for mean state-spec. survival
    mean.psi[u] ~ dunif(0, 1)    # Priors for mean transition
    mean.p[u] ~ dunif(0, 1)      # Priors for mean state-spec. recapture
-   mean.d[u] ~ dunif(0, 1)      # Priors for mean assignment error
-   }
+}
+mean.b ~ dunif(0, 1)  # Prior for mean assignment error
 mean.pi ~ dunif(0, 1)
 
 # Define state-transition and observation matrices
 for (i in 1:nind){
-   for (t in f[i]:(n.occasions - 1)){
+   for (t in f[i]:(n.occasions-1)){
       # Define state probability when an individual is marked
       pj[i,t,1] <- pi[i,t]
-      pj[i,t,2] <- 1 - pi[i,t]
+      pj[i,t,2] <- 1-pi[i,t]
       
-      # Define probabilities of O(t) given S(t) at first encounter
-      po1[1,i,t,1] <- dA[i,t]
+      # Define probabilities of O(t) given S(t) at the occasion of marking (this corresponds to B(0) in E-SURGE notation)
+      po1[1,i,t,1] <- 1
       po1[1,i,t,2] <- 0
-      po1[1,i,t,3] <- 1 - dA[i,t]
-      po1[1,i,t,4] <- 0
-      po1[2,i,t,1] <- 0
-      po1[2,i,t,2] <- dB[i,t]
-      po1[2,i,t,3] <- 1 - dB[i,t]
-      po1[2,i,t,4] <- 0
+      po1[1,i,t,3] <- 0
+      po1[2,i,t,1] <- b[i,t]
+      po1[2,i,t,2] <- 1-b[i,t]
+      po1[2,i,t,3] <- 0
       po1[3,i,t,1] <- 0
       po1[3,i,t,2] <- 0
-      po1[3,i,t,3] <- 0
-      po1[3,i,t,4] <- 1
-   
+      po1[3,i,t,3] <- 1
+      
       # Define probabilities of state S(t+1) given S(t)   
       ps[1,i,t,1] <- phiA[i,t] * (1-psiAB[i,t]) #survival of egg * probability of not transitioning
       ps[1,i,t,2] <- phiA[i,t] * psiAB[i,t] #survival of egg * probability of transitioning
       ps[1,i,t,3] <- 1 - phiA[i,t]  #egg terminates
       ps[2,i,t,1] <- phiB[i,t] * 0  #nestling can't become an egg
-      ps[2,i,t,2] <- phiB[i,t] * (1 - psiBA[i,t]) #survival of nestling * probability of not fledgling/dying 
+      ps[2,i,t,2] <- phiB[i,t] * (1 - psiBA[i,t]) #survival of nestling * prob of not transitioning nestling -> egg 
       ps[2,i,t,3] <- 1 - phiB[i,t] #nestling terminates
       ps[3,i,t,1] <- 0 #terminated can't go backwards
       ps[3,i,t,2] <- 0 #terminated can't go backwards
       ps[3,i,t,3] <- 1 #terminated stays dead
       
       # Define probabilities of O(t) given S(t)
-      # Q/Check, not all these are right - don't understand the difference between [1,i,t,3/4], [2,i,t,3/4]
-      po[1,i,t,1] <- dA[i,t] * pA[i,t]  #prob of correctly obs egg * egg detection probability
+      po[1,i,t,1] <- pA[i,t]  #egg detection probability
       po[1,i,t,2] <- 0  #can't be observed getting PV if an egg
-      #po[1,i,t,3] <- (1 - dA[i,t]) * pA[i,t]  #prob of not observing egg when it is 
-      po[1,i,t,3] <- 0 #don't have uncertain observations when true state is egg
-      po[1,i,t,4] <- 1 - pA[i,t]  #probability of not detecting egg
-      
-      #po[2,i,t,1] <- pB[i,t] * (1 - dA[i,t]) #nestling being observed as an egg (BV state)
-      po[2,i,t,1] <- 0 #can't observe egg state once prey deliveries ever happened; these are unknown
-      po[2,i,t,2] <- dB[i,t] * pB[i,t]  #nestling correctly observed * nestling detection probability
-      po[2,i,t,3] <- (1 - dB[i,t]) * pB[i,t]  #prob of not observing nestling when it is * no nestling detection
-      po[2,i,t,4] <- 1 - pB[i,t]  #probability of not detecting a nestling
-      
-      po[3,i,t,1] <- 0 #can't be terminated and observed, but.... failed eggs?
+      po[1,i,t,3] <- 1 - pA[i,t]  #probability of not detecting egg
+      po[2,i,t,1] <- b[i,t] * pB[i,t] #probability of missing PV * probability of detecting nestling
+      po[2,i,t,2] <- (1 - b[i,t]) * pB[i,t] #probability of detecting PV * nestling detection probability
+      po[2,i,t,3] <- 1 - pB[i,t]  #prob of not observing nestling 
+      po[3,i,t,1] <- 0 
       po[3,i,t,2] <- 0
-      po[3,i,t,3] <- 0
-      po[3,i,t,4] <- 1  #prob of not detecting a terminated nest
+      po[3,i,t,3] <- 1 #prob of not detecting a terminated nest
       } #t
    } #i
-
+ 
 # Likelihood 
 for (i in 1:nind){
    # Define latent state at first capture
    z[i,f[i]] ~ dcat(pj[i, f[i],])
-   y[i,f[i]] ~ dcat(po1[z[i,f[i]], i, f[i],])
+   y[i,f[i]] ~ dcat(po1[z[i,f[i]], i, f[i], ])
    for (t in (f[i]+1):n.occasions){
       # State process: draw S(t) given S(t-1)
-      z[i,t] ~ dcat(ps[z[i,t-1], i, t - 1,])
+      z[i,t] ~ dcat(ps[z[i,t-1], i, t-1,])
       # Observation process: draw O(t) given S(t)
-      y[i,t] ~ dcat(po[z[i,t], i, t - 1,])
+      y[i,t] ~ dcat(po[z[i,t], i, t-1,])
       } #t
    } #i
 }
+write.model(model, "model.txt")
+model.file = paste(getwd(),"model.txt", sep="/")
 
-# Function to create initial values for unknown z
+# Function to create initial values for unknown z to reduce computation time; explained on pg 181-2 of BPA
 me.init.z <- function(ch, f){
    g <- which(ch == 3)
-   g <- c(g, which(ch == 4))
+   g <- c(g, which(ch==4))
    states <- max(ch, na.rm = TRUE)
-   known.states <- 1:(states - 2)
-   ch[g] <- sample(known.states, length(g), replace = TRUE)   
+   known.states <- 1:(states-2)
+   ch[g] <- sample(known.states, length(g), replace = TRUE)
    for (i in 1:nrow(ch)){
       fi <- ch[i,f[i]]
       ch[i,1:f[i]] <- NA
@@ -173,31 +182,32 @@ me.init.z <- function(ch, f){
       }
    return(ch)
    }
-write.model(model, "model.txt")
-model.file = paste(getwd(),"model.txt", sep="/")
-
 
 get.first <- function(x) min(which(x!=0))
-f <- apply(CH_PG, 1, get.first)
+f <- apply(CH_PG_day_small, 1, get.first)
 
 
 # Bundle data
-jags.data <- list(y = CH_PG, f = f, n.occasions = dim(CH_PG)[2], nind = dim(CH_PG)[1])
+jags.data <- list(y = CH_PG_day_small, f = f, 
+                  n.occasions = dim(CH_PG_day_small)[2], 
+                  nind = dim(CH_PG_day_small)[1])
 
-# Initial values
+# Initial values - why no mean.d?
 inits <- function(){list(mean.phi = runif(2, 0, 1), 
                          mean.psi = runif(2, 0, 1), 
-                         mean.p = runif(2, 0, 1), z = me.init.z(CH_PG, f))}  
+                         mean.p = runif(2, 0, 1), 
+                         z = me.init.z(CH_PG_day_small, f))}  
+ 
 
 # Parameters monitored
-parameters <- c("mean.phi", "mean.psi", "mean.p", "mean.d", "mean.pi")
+parameters <- c("mean.phi", "mean.psi", "mean.p", "mean.b", "mean.pi")
 
 # MCMC settings
-nc <- 3; nAdapt <- 100; nb <- 200; ni <- 500+nb; nt <- 1  
+nc <- 3; nAdapt <- 100; nb <- 200; ni <- 500 + nb; nt <- 1  
 
 # Call jagsUI
 me <- jags(jags.data, inits, parameters, n.chains = nc, model.file = model.file,
-           n.adapt=nAdapt, n.thin = nt, n.iter = ni, n.burnin = nb, parallel = F)
+           n.adapt = nAdapt, n.thin = nt, n.iter = ni, n.burnin = nb, parallel = T)
 
 print(me, digits = 3)
 
@@ -205,7 +215,8 @@ print(me, digits = 3)
 
 
 ```{r}
-# Function to simulate multistate capture-recapture data for a model where the true state of an individual may not always be seen; from Kery & Schaub
+
+# Function to simulate multistate capture-recapture data for a model where the disease may not always be seen; from Kery & Schaub BPA
 
 simul.me <- function(PSI.STATE, PSI.OBS, PSI.INI, OBS.INI, marked, unobservable = NA){
    # Unobservable: number of state that is unobservable
@@ -242,25 +253,20 @@ simul.me <- function(PSI.STATE, PSI.OBS, PSI.INI, OBS.INI, marked, unobservable 
    # CH.TRUE: capture histories with perfect observation
    }
 
-
-# Defining parameters, setting up empty matrices and then filling them
-
-
 # Define mean survival, transitions, recapture, as well as number of occasions, states, observations and released individuals
-phiA <- 0.8
-phiB <- 0.6
-psiAB <- 0.3
-psiBA <- 0.5
-pA <- 0.7
-pB <- 0.4
-dA <- 0.9     # probability that the state of an individual that is in state A is correctly observed 
-dB <- 0.6     # probability that the state of an individual that is in state B is correctly observed
-psi <- 0.75   # probability that an individual is in state A when marked
+phiA <- 0.8  # survial if healthy
+phiB <- 0.6  # survival if diseased
+psiAB <- 0.3 # probability healthy individual transitions to disease state, conditional on survival
+psiBA <- 0.5 # probability diseased individual transitions to healthy state, conditional on survival
+pA <- 0.7    # probability of detection if in healthy state
+pB <- 0.4    # probability of detection if in diseased state
+b <- 0.2     # probability that the disease is not detected
+psi <- 0.75  # probability that an individual is in healthy state when marked
 
-n.occasions <- 6
+n.occasions <- 13
 n.states <- 3
-n.obs <- 4
-marked <- rep(2500, n.occasions)  
+n.obs <- 3
+marked <- rep(250, n.occasions)  
 
 # Define matrices with survival, transition and recapture probabilities
 # These are 4-dimensional matrices, with 
@@ -286,9 +292,9 @@ PSI.OBS <- array(NA, dim=c(n.states, n.obs, totrel, n.occasions-1))
 for (i in 1:totrel){
    for (t in 1:(n.occasions-1)){
       PSI.OBS[,,i,t] <- matrix(c(
-      dA * pA, 0,  (1-dA) * pA, 1-pA,
-      0,  dB * pB, (1-dB) * pB, 1-pB,
-      0,  0,  0, 1       ), nrow = n.states, byrow = TRUE)
+      pA, 0, 1-pA,
+      b * pB,  (1-b) * pB, 1-pB,
+      0,  0, 1       ), nrow = n.states, byrow = TRUE)
       } #t
    } #i
 
@@ -306,18 +312,16 @@ OBS.INI <- array(NA, dim=c(n.states, n.obs, totrel, n.occasions))
 for (i in 1:totrel){
    for (t in 1:n.occasions){
       OBS.INI[,,i,t] <- matrix(c(
-      dA , 0,  1-dA, 0,
-      0,  dB,  1-dB, 0,
-      0,  0,  0, 1       ), nrow = n.states, byrow = TRUE)
+      1, 0,  0,
+      b,  1-b,  0,
+      0,  0,  1       ), nrow = n.states, byrow = TRUE)
       } #t
    } #i
-
-
 
 # Execute function
 sim <- simul.me(PSI.STATE, PSI.OBS, PSI.INI, OBS.INI, marked)
 CH <- sim$CH
-table(CH) # 0 = not seen, 1 = seen alive in A, 2 = seen alive in B, 3 = seen alive but unknown site ("state") 
+#table(CH) # 0 = not seen, 1 = seen alive as egg, 2 = seen alive as nestling, 3 = seen alive in unknown state
 
 
 # Compute vector with occasion of first capture
@@ -325,9 +329,48 @@ get.first <- function(x) min(which(x!=0))
 f <- apply(CH, 1, get.first)
 
 # Recode CH matrix: note, a 0 is not allowed in WinBUGS!
-# 1 = seen alive in A, 2 = seen alive in B, 3 = seen alive, unknown site, 4 = not seen
+# 1 = seen without disease, 2 = seen with disease, 3 = not seen
 rCH <- CH          # Recoded CH
-rCH[rCH==0] <- 4
+rCH[rCH==0] <- 3
+
+
+# Function to create initial values for unknown z
+me.init.z <- function(ch, f){
+   g <- which(ch == 3)
+   g <- c(g, which(ch==4))
+   states <- max(ch, na.rm = TRUE)
+   known.states <- 1:(states-2)
+   ch[g] <- sample(known.states, length(g), replace = TRUE)   
+   for (i in 1:nrow(ch)){
+      fi <- ch[i,f[i]]
+      ch[i,1:f[i]] <- NA
+      ch[i,f[i]] <- fi
+      }
+   return(ch)
+   }
+
+
+# Bundle data
+jags.data <- list(y = rCH, f = f, n.occasions = dim(rCH)[2], nind = dim(rCH)[1])
+
+# Initial values
+inits <- function(){list(mean.phi = runif(2, 0, 1), 
+                         mean.psi = runif(2, 0, 1), 
+                         mean.p = runif(2, 0, 1), z = me.init.z(rCH, f))}  
+
+# Parameters monitored
+parameters <- c("mean.phi", "mean.psi", "mean.p", "mean.b", "mean.pi")
+
+
+# MCMC settings
+nc <- 3; nAdapt <- 1000; nb <- 2000; ni <- 5000+nb; nt <- 1  
+
+# Call jagsUI
+me.sim <- jags(jags.sim, inits, parameters, n.chains = nc, model.file = model.file,
+           n.adapt=nAdapt, n.thin = nt, n.iter = ni, n.burnin = nb, parallel=F)
+
+print(me.sim, digits = 3)
+
 
 ```
 
